Projects page shifting solved
due to scroll bar appearing

--- a/style.css
+++ b/style.css
@@ -65,9 +65,14 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-
 }
+
+html {
+    scrollbar-gutter: stable;
+}
+
 body{
+    font-family: Poppins;
     --topbar-height: 100px;
     min-height: 100vh;
     background-color: var(--background-color);
@@ -82,22 +87,6 @@ body{
     );
 }
         
-body::before{
-
-    position: absolute;
-    width: min(1400px, 90vw);
-    top: 10%;
-    left: 50%;
-    height: 90%;
-    transform: translateX(-50%);
-    content: '';
-    background-image: url(images/bg.png);
-    background-size: 100%;
-    background-repeat: no-repeat;
-    background-position: top center;
-    pointer-events: none;
-}
-
 iframe {
     position: absolute;
     top: 0;
@@ -404,8 +393,9 @@ iframe {
 
 /* Projects Page */
 
+
 .projects {
-    max-width: 1200px;
+    max-width: 1400px;
     margin: 120px auto;
     padding: 20px;
 }
@@ -415,7 +405,7 @@ iframe {
     margin-bottom: 20px;
     font-size: 3em;
     color: var(--text-color);
-    margin-top: -25px; /* 👈 control vertical position here */
+    margin-top: -25px; 
 }
 
 .project-list {
@@ -437,6 +427,7 @@ iframe {
 /* Image styling */
 .project-item img {
     width: 200px;
+    max-width: 100%;
     height: 150px;
     object-fit: cover;
     border-radius: 10px;
@@ -549,11 +540,9 @@ iframe {
 }
 
 
-
 /* Contact Page */
 
-body{
-    font-family: Poppins;
+body.contact-page{
     min-height: 100vh;
     display: flex;
     justify-content: center;   /* horizontal center */
